crates/solidity-v2/testing/snapshots/diagnostics_output/structure/library_receive_function/generated/solc/0.8.5-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 2

[DeclarationError 4549] Error: Libraries cannot have receive ether functions.
   ╭─[input.sol:6:5]
   │
 6 │     receive() external payable {}
   │     ──────────────┬──────────────  
   │                   ╰──────────────── Error occurred here.
───╯

[TypeError 7708] Error: Library functions cannot be payable.
   ╭─[input.sol:6:5]
   │
 6 │     receive() external payable {}
   │     ──────────────┬──────────────  
   │                   ╰──────────────── Error occurred here.
───╯
